samples/_failures_safe/1761296293_ed4d07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d58308b.c: In function ‘main’:
./samples/SAFE/__tmp_9d58308b.c:174:17: error: expected ‘;’ at end of input
  174 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_9d58308b.c:174:9: error: expected declaration or statement at end of input
  174 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_9d58308b.c:174:9: error: expected declaration or statement at end of input
